[project]
name = "passwordgen"
version = "3.0.0"
description = "A Python library for secure password generation and management."
authors = [
    { name = "Calestial Ashley", email = "calestialashley@gmail.com" }
]
license = "MIT"
readme = "README.md"
keywords = ["password", "security", "password generator", "encryption", "password manager"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development"
]
dependencies = [
    "cryptography >=39.0.1",
    "rich >=13.0.1"
]
dependencies = [
    "cryptography >=39.0.1",
    "rich >=13.0.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
dependencies = [
    "cryptography = ^39.0.1",
    "rich = ^13.0.1",
]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^5.0"
mypy = "^1.5.0"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
exclude = ".git,__pycache__,.tox,build,dist"

[tool.mypy]
files = "src/passwordgen.py"
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[tool.setuptools]
packages = find:
package-dir = {"": "src"}

[tool.setuptools.package_data]
passwordgen = ["py.typed"]
